@@ -82,8 +82,8 @@ oggenc \- encode audio into the Ogg Vorbis format
 
 .SH DESCRIPTION
 .B oggenc
-reads audio data in either raw, Wave, or AIFF format and encodes it into an
-Ogg Vorbis stream.
+reads audio data in either raw, Wave, AIFF or 16 bit u-Law (.au) format and
+encodes it into an Ogg Vorbis stream.
 .B oggenc
 may also read audio data from FLAC and Ogg FLAC files depending upon compile-time options.  If the input file "-" is specified, audio data is
 read from
